# test__

./: main.py  preferences.py  pyproject.toml  requirements.txt
UI/: example.ui  preferences.ui
