[tool.poetry]
name = "test"
version = "0.1.0"
description = "Simple app to setup system time using Timedatectl and GT"
authors = ["Alex"]
license = "GPL 3.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
PyGObject = "^3.48.2"
tzlocal = "^5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
